--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ html {
     border: white;
     padding-top: 5px;
 	font-family:'Open Sans', sans-serif;
-	font-style: extra-bold;
 	font-size: 48px;
 	color: #FFFFFF;
 }
@@ -28,6 +27,7 @@ h1 {
 	text-align: left;
 	padding-top: 20px;
 	padding-left: 60px;
+	font-weight: 800;
 }
 .getit {
 	color: black;
@@ -42,6 +42,7 @@ h1 {
 }
 h2 {
 	padding-top: 80px;
+	font-weight: 600;
 }
 h3 {
 	font-weight: 600;
@@ -74,27 +75,27 @@ ul {
 	line-height: 45px;
 }
 #amanda {
+	line-height: 25px;
+	font-style: normal;
 	font-size: 36px;
-	font-style: 600;
+	font-weight: 600;
 }
 .footer {
 	font-weight: extra-bold;
 	font-size: 48px;
 	background-color: #121212;
-
 }
 .signup {
-
 	color: white;
 	background: #033048;
 	font-weight: bold;
 	font-size: 28px;
-	padding: 15px 80px 15px 80px;
+	padding: 15px 60px 15px 60px;
 	box-shadow: none;
 	border-radius: 4px;
 	border-color: #f9e42e;
 	border-style: solid;
-	border-width: 30px 500px 30px 500px;
+	border-width: 30px 480px 30px 480px;
 }
 footer {
 	background-color: #121212;
